syntax = "proto3";
package desmos.posts.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/desmos-labs/desmos/x/staging/posts/types";

// Params contains the parameters for the posts module
message Params {
  bytes max_post_message_length = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"max_post_message_length\""
  ];
  bytes max_optional_data_fields_number = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"max_optional_data_fields_number\""
  ];
  bytes max_optional_data_field_value_length = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"max_optional_data_field_value_length\""
  ];
}
